--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -1,64 +1,64 @@
 {
-  "customers": "Customers",
-  "hi": "Hi",
-  "productivity": "Productivity",
-  "week": "Week",
-  "month": "Month",
-  "jobsDoneThisWeek": "jobs done this week",
-  "jobsScheduledThisWeek": "jobs scheduled this week",
-  "jobsDoneThisMonth": "jobs done this month",
+  "customers": "Clients",
+  "hi": "Salut",
+  "productivity": "Productivité",
+  "week": "Semaine",
+  "month": "Mois",
+  "jobsDoneThisWeek": "Jobs effectués cette semaine",
+  "jobsScheduledThisWeek": "jobs prévu cette semaine",
+  "jobsDoneThisMonth": "Jobs prévu ce mois-ci",
   "jobsScheduledThisMonth": "jobs scheduled this month",
-  "search": "Search",
-  "items": "Items",
-  "paramPerPage": "{item} per page",
+  "search": "Chercher",
+  "items": "Articles",
+  "paramPerPage": "{item} par page",
   "ofParamPages": "of {pages} pages",
-  "paramOfParamParam": "{range} of {total} {item}",
-  "applications": "Applications",
-  "washers": "Washers",
-  "setLocation": "Set location",
-  "back": "Back",
-  "viewMore": "View more",
-  "dateAndTime": "Date & time",
-  "location": "Location",
-  "iAmPayingForMyOwnTransport": "I am paying for my own transport",
-  "fromYou": "from you",
-  "jobInfo": "Job info",
-  "anytime": "Anytime",
-  "thisWeek": "This week",
-  "thisMonth": "This month",
-  "earlier": "Earlier",
-  "upcomingJobs": "Upcoming jobs",
-  "myJobs": "My jobs",
-  "viewAll": "View all",
-  "selectDates": "Select dates",
-  "sun": "Sun",
-  "mon": "Mon",
-  "tue": "Tue",
-  "wed": "Wed",
-  "thu": "Thu",
-  "fri": "Fri",
-  "sat": "Sat",
-  "address": "Address",
-  "dateOfBirth": "Date of birth",
-  "phoneNumber": "Phone number",
-  "language": "Language",
-  "password": "Password",
-  "logout": "Logout",
-  "profile": "Profile",
-  "more": "More",
-  "termsAndConditions": "Terms & conditions",
-  "privacyPolicy": "Privacy policy",
-  "licenses": "Licenses",
-  "apply": "Apply",
-  "approved": "Approved",
-  "rejected": "Rejected",
-  "pending": "Pending",
-  "applyForJob": "Apply for job",
-  "cancelled": "Cancelled",
-  "completed": "Completed",
+  "paramOfParamParam": "{range} sur {total} {item}",
+  "applications": "Postulations",
+  "washers": "Laveurs",
+  "setLocation": "Définir lieu",
+  "back": "Retourner",
+  "viewMore": "Voir plus",
+  "dateAndTime": "Date & heure",
+  "location": "Lieu",
+  "iAmPayingForMyOwnTransport": "Je paie mon propre transport",
+  "fromYou": "De toi",
+  "jobInfo": "Informations du job",
+  "anytime": "À tout moment",
+  "thisWeek": "Cette semaine",
+  "thisMonth": "Ce mois-ci",
+  "earlier": "Plus tôt",
+  "upcomingJobs": "Jobs à venir",
+  "myJobs": "Mes jobs",
+  "viewAll": "Voir tout",
+  "selectDates": "Sélectionner dates",
+  "sun": "Lun",
+  "mon": "Mar",
+  "tue": "Mer",
+  "wed": "Jeu",
+  "thu": "Ven",
+  "fri": "Sam",
+  "sat": "Dim",
+  "address": "Adresse",
+  "dateOfBirth": "Date de naissance",
+  "phoneNumber": "Numéro de téléphone",
+  "language": "Langue",
+  "password": "Mot de passe",
+  "logout": "Déconnecter",
+  "profile": "Profil",
+  "more": "Plus",
+  "termsAndConditions": "Conditions générales",
+  "privacyPolicy": "Politique de confidentialité",
+  "licenses": "Licences",
+  "apply": "Postuler",
+  "approved": "Approuvé",
+  "rejected": "Rejeté",
+  "pending": "En attente",
+  "applyForJob": "Postuler pour ce job",
+  "cancelled": "Annulé",
+  "completed": "Terminé",
   "home": "Home",
-  "statistics": "Statistics",
+  "statistics": "Statistiques",
   "jobs": "Jobs",
-  "history": "History",
-  "settings": "Settings"
+  "history": "Histoire",
+  "settings": "Paramètres"
 }
