--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -1,16 +1,51 @@
 {
   "customers": "Klanten",
+  "welcomeBack": "Welkom terug",
+  "unserviced": "Klanten",
+  "onAverage": "Gemiddeld",
+  "name": "Naam",
+  "Phone": "Tel",
+  "Company": "Bedrijf",
+  "washer": "Washer",
+  "addNewWasher": "Nieuwe Washer",
+  "createNewJob": "Nieuwe job toevoegen",
+  "dutch": "Nederlands",
+  "french": "Frans",
+  "english": "Engels",
+  "registered": "Geregistreerd",
+  "active": "Actieve",
+  "duplicate": "Dupliceren",
+  "Edit": "Wijzigen",
+  "automaticallyLogOutAfter": "Automatisch uitloggen na",
+  "afterOneHour": "1 Uur",
+  "afterOneDay": "1 Dag",
+  "afterOneWeek": "1 Week",
+  "notification": "Melding",
+  "both": "Beiden",
+  "january": "Januari",
+  "February": "Februari",
+  "March": "Maart",
+  "April": "April",
+  "May": "Mei",
+  "June": "Juni",
+  "August": "Augustus",
+  "September": "September",
+  "October": "Oktober",
+  "November": "November",
+  "December": "December",
   "hi": "Dag",
   "productivity": "Productiviteit",
   "week": "Week",
   "month": "Maand",
-  "jobsDoneThisWeek": "jobs gedaan deze week",
+  "jobsDoneThisWeek": "jobs voltooid deze week",
   "jobsScheduledThisWeek": "jobs ingepland deze week",
-  "jobsDoneThisMonth": "jobs gedaan deze month",
-  "jobsScheduledThisMonth": "jobs ingepland deze month",
-  "setLocation": "Locatie selecteren",
+  "jobsDoneThisMonth": "jobs voltooid deze maand",
+  "jobsScheduledThisMonth": "jobs ingepland deze maand",
+  "setLocation": "Locatie instellen",
   "search": "Zoeken",
   "items": "Items",
+  "outOfAllPlannedJobs": "Van alle geplande jobs",
+  "outOfAllJobs": "Van alle jobs",
   "paramPerPage": "{item} per pagina",
   "ofParamPages": "van de {pages} paginas",
   "paramOfParamParam": "{range} van de {total} {item}",
@@ -20,7 +55,7 @@
   "viewMore": "Meer",
   "dateAndTime": "Datum & tijd",
   "location": "Locatie",
-  "iAmPayingForMyOwnTransport": "Ik hoef geen transport kosten",
+  "iAmPayingForMyOwnTransport": "Ik betaal mijn eigen transportkosten",
   "fromYou": "van jou",
   "jobInfo": "Job info",
   "anytime": "Altijd",
@@ -40,7 +75,7 @@
   "sat": "Zat",
   "address": "Adres",
   "dateOfBirth": "Geboortedatum",
-  "phoneNumber": "Telefoon nummer",
+  "phoneNumber": "Telefoonnummer",
   "language": "Taal",
   "password": "Wachtwoord",
   "logout": "Uitloggen",
@@ -50,15 +85,18 @@
   "privacyPolicy": "Privacy policy",
   "licenses": "Licenties",
   "apply": "Aanmelden",
-  "approved": "Goedgekeurd",
+  "approved": "Geaccepteerd",
   "rejected": "Afgewezen",
   "pending": "In afwachting",
   "applyForJob": "Aanmelden voor job",
-  "cancelled": "Gecancelled",
+  "cancelled": "Geannuleerd",
   "completed": "Voltooid",
+  "completedJobs": "Voltooide Jobs",
+
   "home": "Home",
   "statistics": "Statistieken",
   "jobs": "Jobs",
   "history": "Geschiedenis",
   "settings": "Instellingen"
+  
 }
