--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,36 +1,71 @@
 {
   "customers": "Customers",
+  "welcomeBack": "Welcome back",
+  "unserviced": "Unserviced",
+  "onAverage": "On average",
+  "name": "Name",
+  "Phone": "Phone",
+  "Company": "Company",
+  "washer": "Washer",
+  "addNewWasher": "Add new washer",
+  "createNewJob": "Create new job",
+  "dutch": "Dutch",
+  "french": "French",
+  "english": "English",
+  "registered": "Registered",
+  "active": "Active",
+  "duplicate": "Duplicate",
+  "Edit": "Edit",
+  "automaticallyLogOutAfter": "Automatically log out after",
+  "afterOneHour": "One hour",
+  "afterOneDay": "One Day",
+  "afterOneWeek": "One Week",
+  "notification": "Notification",
+  "both": "Both",
+  "january": "January",
+  "February": "February",
+  "March": "March",
+  "April": "April",
+  "May": "May",
+  "June": "June",
+  "August": "August",
+  "September": "September",
+  "October": "October",
+  "November": "November",
+  "December": "December",
   "hi": "Hi",
   "productivity": "Productivity",
-  "week": "Week",
+  "week": "Weej",
   "month": "Month",
-  "jobsDoneThisWeek": "jobs done this week",
-  "jobsScheduledThisWeek": "jobs scheduled this week",
-  "jobsDoneThisMonth": "jobs done this month",
-  "jobsScheduledThisMonth": "jobs scheduled this month",
+  "jobsDoneThisWeek": "Jobs done this week",
+  "jobsScheduledThisWeek": "Jobs scheduled this week",
+  "jobsDoneThisMonth": "Jobs done this month",
+  "jobsScheduledThisMonth": "Jobs scheduled this month",
+  "setLocation": "Set location ",
   "search": "Search",
   "items": "Items",
+  "outOfAllPlannedJobs": "Out of all planned jobs",
+  "outOfAllJobs": "Out of all jobs",
   "paramPerPage": "{item} per page",
-  "ofParamPages": "of {pages} pages",
-  "paramOfParamParam": "{range} of {total} {item}",
+  "ofParamPages": "out of {pages} pages",
+  "paramOfParamParam": "{range} of the {total} {item}",
   "applications": "Applications",
   "washers": "Washers",
-  "setLocation": "Set location",
   "back": "Back",
   "viewMore": "View more",
-  "dateAndTime": "Date & time",
+  "dateAndTime": "Date & Time",
   "location": "Location",
   "iAmPayingForMyOwnTransport": "I am paying for my own transport",
-  "fromYou": "from you",
+  "fromYou": "From you",
   "jobInfo": "Job info",
   "anytime": "Anytime",
   "thisWeek": "This week",
   "thisMonth": "This month",
-  "earlier": "Earlier",
+  "earlier": "Eerlier",
   "upcomingJobs": "Upcoming jobs",
   "myJobs": "My jobs",
   "viewAll": "View all",
-  "selectDates": "Select dates",
+  "selectDates": "Select Dates",
   "sun": "Sun",
   "mon": "Mon",
   "tue": "Tue",
@@ -56,9 +91,11 @@
   "applyForJob": "Apply for job",
   "cancelled": "Cancelled",
   "completed": "Completed",
+  "completedJobs": "Completed jobs",
   "home": "Home",
   "statistics": "Statistics",
   "jobs": "Jobs",
   "history": "History",
   "settings": "Settings"
+  
 }
