--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -35,7 +35,7 @@
   "December": "December",
   "hi": "Hi",
   "productivity": "Productivity",
-  "week": "Weej",
+  "week": "Week",
   "month": "Month",
   "jobsDoneThisWeek": "Jobs done this week",
   "jobsScheduledThisWeek": "Jobs scheduled this week",
@@ -97,5 +97,4 @@
   "jobs": "Jobs",
   "history": "History",
   "settings": "Settings"
-  
 }
