--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -6,6 +6,7 @@
   "createNewCustomer": "Create new Customer",
   "hours": "Hours",
   "email": "Email",
+  "phone": "Phone",
   "customers": "Clients",
   "hi": "Salut",
   "productivity": "Productivité",
