--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -10,6 +10,7 @@
   "welcomeBack": "Welkom terug",
   "unserviced": "Klanten",
   "onAverage": "Gemiddeld",
+  "phone": "Telefoon",
   "name": "Naam",
   "Phone": "Tel",
   "Company": "Bedrijf",
