--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -6,6 +6,7 @@
   "createNewCustomer": "Create new Customer",
   "hours": "Hours",
   "email": "Email",
+  "phone": "Phone",
   "customers": "Customers",
   "welcomeBack": "Welcome back",
   "unserviced": "Unserviced",
