fix: post release fixes

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -31,16 +31,17 @@
   "notification": "Notification",
   "both": "Both",
   "january": "January",
-  "February": "February",
-  "March": "March",
-  "April": "April",
-  "May": "May",
-  "June": "June",
-  "August": "August",
-  "September": "September",
-  "October": "October",
-  "November": "November",
-  "December": "December",
+  "february": "February",
+  "march": "March",
+  "april": "April",
+  "may": "May",
+  "june": "June",
+  "july": "July",
+  "august": "August",
+  "september": "September",
+  "october": "October",
+  "november": "November",
+  "december": "December",
   "hi": "Hi",
   "productivity": "Productivity",
   "week": "Week",
@@ -64,6 +65,7 @@
   "dateAndTime": "Date & Time",
   "location": "Location",
   "iAmPayingForMyOwnTransport": "I am paying for my own transport",
+  "iAmNotPayingForMyOwnTransport": "I am not paying for my own transport",
   "fromYou": "From you",
   "jobInfo": "Job info",
   "anytime": "Anytime",
@@ -104,5 +106,16 @@
   "statistics": "Statistics",
   "jobs": "Jobs",
   "history": "History",
-  "settings": "Settings"
+  "settings": "Settings",
+  "select": "Select",
+  "deleteMyAccount": "Delete my account",
+  "iStartedAt": "I started at:",
+  "iEndedAt": "I ended at:",
+  "confirmTimes": "Confirm times",
+  "noJobs": "No jobs",
+  "noAppliedJobs": "No applied jobs",
+  "startAddress": "Start address",
+  "chooseLocation": "Choose location",
+  "from": "From",
+  "until": "Until"
 }
