--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -29,6 +29,7 @@
   "dateAndTime": "Date & heure",
   "location": "Lieu",
   "iAmPayingForMyOwnTransport": "Je paie mon propre transport",
+  "iAmNotPayingForMyOwnTransport": "Je ne paie pas mon propre transport",
   "fromYou": "De toi",
   "jobInfo": "Informations du job",
   "anytime": "À tout moment",
@@ -68,5 +69,28 @@
   "statistics": "Statistiques",
   "jobs": "Jobs",
   "history": "Histoire",
-  "settings": "Paramètres"
+  "settings": "Paramètres",
+  "select": "Choisir",
+  "deleteMyAccount": "Supprimer mon compte",
+  "iStartedAt": "J'ai commencé à:",
+  "iEndedAt": "J'ai terminé à :",
+  "confirmTimes": "Confirmer les horaires",
+  "noJobs": "Pas de jobs",
+  "noAppliedJobs": "Pas de jobs postulé",
+  "startAddress": "Adresse de départ",
+  "chooseLocation": "Choisir lieu",
+  "january": "Janvier",
+  "february": "Février",
+  "march": "Mars",
+  "april": "Avril",
+  "may": "Mai",
+  "june": "Juin",
+  "july": "Juillet",
+  "august": "Août",
+  "september": "Septembre",
+  "october": "Octobre",
+  "november": "November",
+  "december": "Décembre",
+  "from": "De",
+  "until": "Jusqu'à"
 }
