--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -64,6 +64,7 @@
   "dateAndTime": "Datum & tijd",
   "location": "Locatie",
   "iAmPayingForMyOwnTransport": "Ik betaal mijn eigen transportkosten",
+  "iAmNotPayingForMyOwnTransport": "Ik betaal niet mijn eigen transportkosten",
   "fromYou": "van jou",
   "jobInfo": "Job info",
   "anytime": "Altijd",
@@ -104,5 +105,27 @@
   "statistics": "Statistieken",
   "jobs": "Jobs",
   "history": "Geschiedenis",
-  "settings": "Instellingen"
+  "settings": "Instellingen",
+  "select": "Selecteren",
+  "deleteMyAccount": "Mijn account verwijderen",
+  "iStartedAt": "Ik begon om:",
+  "iEndedAt": "Ik eindigde om:",
+  "confirmTimes": "Uren bevestigen",
+  "noJobs": "Geen jobs",
+  "noAppliedJobs": "Geen ingetekende jobs",
+  "startAddress": "Start adres",
+  "chooseLocation": "Kies locatie",
+  "february": "Februari",
+  "march": "Maart",
+  "april": "April",
+  "may": "Mei",
+  "june": "Juni",
+  "july": "Juli",
+  "august": "Augustus",
+  "september": "September",
+  "october": "Oktober",
+  "november": "November",
+  "december": "December",
+  "from": "Van",
+  "until": "Tot"
 }
