fix: added translations

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -71,11 +71,16 @@
   "anytime": "Anytime",
   "thisWeek": "This week",
   "thisMonth": "This month",
+  "lastWeek": "Last week",
+  "lastMonth": "Last month",
+  "thisYear": "This year",
+  "lastYear": "Last year",
   "earlier": "Eerlier",
   "upcomingJobs": "Upcoming jobs",
   "myJobs": "My jobs",
   "viewAll": "View all",
   "selectDates": "Select Dates",
+  "selectTimes": "Select Times",
   "sun": "Sun",
   "mon": "Mon",
   "tue": "Tue",
@@ -113,9 +118,18 @@
   "iEndedAt": "I ended at:",
   "confirmTimes": "Confirm times",
   "noJobs": "No jobs",
+  "noItems": "No items",
   "noAppliedJobs": "No applied jobs",
   "startAddress": "Start address",
   "chooseLocation": "Choose location",
   "from": "From",
-  "until": "Until"
+  "until": "Until",
+  "filter": "Filter",
+  "startTime": "Start time",
+  "endTime": "End time",
+  "h": "h",
+  "copied": "Copied",
+  "something": "Something",
+  "gotCopiedToYourClipboard": "got copied to your clipboard",
+  "denied": "Denied"
 }
