--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -106,5 +106,6 @@
   "copied": "Copié",
   "something": "Quelque chose",
   "gotCopiedToYourClipboard": "a été copié dans le presse-papiers",
-  "denied": "Refusé"
+  "denied": "Refusé",
+  "goBack": "Retourner"
 }
