--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -141,5 +141,6 @@
   "copied": "Gekopieerd",
   "something": "Iets",
   "gotCopiedToYourClipboard": "werd gekopieerd naar je klembord",
-  "denied": "Afgewezen"
+  "denied": "Afgewezen",
+  "goBack": "Terug"
 }
