--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -131,5 +131,6 @@
   "copied": "Copied",
   "something": "Something",
   "gotCopiedToYourClipboard": "got copied to your clipboard",
-  "denied": "Denied"
+  "denied": "Denied",
+  "goBack": "Go back"
 }
