--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -45,11 +45,11 @@
   "hi": "Hi",
   "productivity": "Productivity",
   "week": "Week",
-  "month": "Month",
+  "month": "Year",
   "jobsDoneThisWeek": "Jobs done this week",
   "jobsScheduledThisWeek": "Jobs scheduled this week",
-  "jobsDoneThisMonth": "Jobs done this month",
-  "jobsScheduledThisMonth": "Jobs scheduled this month",
+  "jobsDoneThisMonth": "Jobs done this year",
+  "jobsScheduledThisMonth": "Jobs scheduled this year",
   "setLocation": "Set location ",
   "search": "Search",
   "items": "Items",
