--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -11,11 +11,11 @@
   "hi": "Salut",
   "productivity": "Productivité",
   "week": "Semaine",
-  "month": "Mois",
+  "month": "Année",
   "jobsDoneThisWeek": "Jobs effectués cette semaine",
-  "jobsScheduledThisWeek": "jobs prévu cette semaine",
-  "jobsDoneThisMonth": "Jobs prévu ce mois-ci",
-  "jobsScheduledThisMonth": "jobs scheduled this month",
+  "jobsScheduledThisWeek": "Jobs prévus cette semaine",
+  "jobsDoneThisMonth": "Jobs effectués cette année",
+  "jobsScheduledThisMonth": "Jobs prévus cette année",
   "search": "Chercher",
   "items": "Articles",
   "paramPerPage": "{item} par page",
