--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -44,11 +44,11 @@
   "hi": "Dag",
   "productivity": "Productiviteit",
   "week": "Week",
-  "month": "Maand",
+  "month": "Jaar",
   "jobsDoneThisWeek": "jobs voltooid deze week",
   "jobsScheduledThisWeek": "jobs ingepland deze week",
-  "jobsDoneThisMonth": "jobs voltooid deze maand",
-  "jobsScheduledThisMonth": "jobs ingepland deze maand",
+  "jobsDoneThisMonth": "jobs voltooid dit jaar",
+  "jobsScheduledThisMonth": "jobs ingepland dit jaar",
   "setLocation": "Locatie instellen",
   "search": "Zoeken",
   "items": "Items",
