--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -5,7 +5,27 @@
   "customerName": "Customer name",
   "createNewCustomer": "Create new Customer",
   "hours": "Hours",
-  "email": "Email",
+  "email": "E-mail",
+  "next": "Next",
+  "welcomeToWerkr": "Welcome to WERKR",
+  "becomeAWerkr": "Become a WERKR",
+  "alreadyAWerkr": "Already a WERKR",
+  "workWithWerkr": "Work with WERKR,\nfast & easy",
+  "emailAddress": "Email address",
+  "forgotPassword": "Forgot password?",
+  "resetPassword": "Reset password",
+  "confirmPassword": "Confirm password",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "createANewPassword": "Create a new password",
+  "setYourPassword": "Set your new password so you can login and access WERKR",
+  "passwordHasBeenReset": "Your password has been reset!",
+  "youCanNowLogin":"You can now login with your new password", 
+  "dontHaveAnAccount": "Don't have an account?",
+  "register": "Register",
+  "verifyYourEmail": "Verify your email",
+  "verifyYourEmailDescription": "To verify your identity, please enter the code we sent to your email address.",
+  "verificationCode": "Verification code",
+  "yourCode": "Your code",
   "phone": "Phone",
   "customers": "Customers",
   "welcomeBack": "Welcome back",
@@ -75,7 +95,7 @@
   "lastMonth": "Last month",
   "thisYear": "This year",
   "lastYear": "Last year",
-  "earlier": "Eerlier",
+  "earlier": "Earlier",
   "upcomingJobs": "Upcoming jobs",
   "myJobs": "My jobs",
   "viewAll": "View all",
@@ -130,7 +150,15 @@
   "h": "h",
   "copied": "Copied",
   "something": "Something",
+  "somethingWentWrong": "Something went wrong, we're aware!",
+  "codeIncorrect": "Are you sure the given code is correct?",
   "gotCopiedToYourClipboard": "got copied to your clipboard",
   "denied": "Denied",
-  "goBack": "Go back"
+  "goBack": "Go back",
+  "breakTime": "Break time",
+  "aPlatformWhere": "A platform where students and flexi's\nfrom ",
+  "canExplore": " can explore and apply for\nopportunities within the ",
+  "jobPortfolio": " job portfolio",
+  "werkr": "WERKR",
+  "letsLogin": "Let’s log in. Apply to jobs!"
 }
