--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -1,84 +1,55 @@
 {
-  "oops": "Oops...",
-  "newCopy": "New",
-  "customer": "Customer",
-  "customerName": "Customer name",
-  "createNewCustomer": "Create new Customer",
-  "hours": "Hours",
-  "email": "Email",
-  "phone": "Phone",
+  "oops": "Oups...",
+  "newCopy": "Nouveau",
+  "customer": "Client",
+  "customerName": "Nom du client",
+  "createNewCustomer": "Créer un nouveau client",
+  "hours": "Heures",
+  "email": "E-mail",
+  "next": "Suivant",
+  "welcomeToWerkr": "Bienvenue sur WERKR",
+  "becomeAWerkr": "Devenir un WERKR",
+  "alreadyAWerkr": "Déjà un WERKR",
+  "workWithWerkr": "Travaillez avec WERKR,\nrapide & facile",
+  "emailAddress": "Adresse e-mail",
+  "forgotPassword": "Mot de passe oublié ?",
+  "resetPassword": "Réinitialiser le mot de passe",
+  "confirmPassword": "Confirmer le mot de passe",
+  "passwordsDoNotMatch": "Les mots de passe ne correspondent pas",
+  "createANewPassword": "Créer un nouveau mot de passe",
+  "setYourPassword": "Définissez votre nouveau mot de passe pour pouvoir vous connecter et accéder à WERKR",
+  "passwordHasBeenReset": "Votre mot de passe a été réinitialisé !",
+  "youCanNowLogin": "Vous pouvez maintenant vous connecter avec votre nouveau mot de passe",
+  "dontHaveAnAccount": "Vous n'avez pas de compte ?",
+  "register": "S'inscrire",
+  "verifyYourEmail": "Vérifiez votre e-mail",
+  "verifyYourEmailDescription": "Pour vérifier votre identité, veuillez saisir le code que nous avons envoyé à votre adresse e-mail.",
+  "verificationCode": "Code de vérification",
+  "yourCode": "Votre code",
+  "phone": "Téléphone",
   "customers": "Clients",
-  "hi": "Salut",
-  "productivity": "Productivité",
-  "week": "Semaine",
-  "month": "Année",
-  "jobsDoneThisWeek": "Jobs effectués cette semaine",
-  "jobsScheduledThisWeek": "Jobs prévus cette semaine",
-  "jobsDoneThisMonth": "Jobs effectués cette année",
-  "jobsScheduledThisMonth": "Jobs prévus cette année",
-  "search": "Chercher",
-  "items": "Articles",
-  "paramPerPage": "{item} par page",
-  "ofParamPages": "of {pages} pages",
-  "paramOfParamParam": "{range} sur {total} {item}",
-  "applications": "Postulations",
-  "washers": "Laveurs",
-  "setLocation": "Définir lieu",
-  "back": "Retourner",
-  "viewMore": "Voir plus",
-  "dateAndTime": "Date & heure",
-  "location": "Lieu",
-  "iAmPayingForMyOwnTransport": "Je paie mon propre transport",
-  "iAmNotPayingForMyOwnTransport": "Je ne paie pas mon propre transport",
-  "fromYou": "De toi",
-  "jobInfo": "Informations du job",
-  "anytime": "À tout moment",
-  "thisWeek": "Cette semaine",
-  "thisMonth": "Ce mois-ci",
-  "earlier": "Plus tôt",
-  "upcomingJobs": "Jobs à venir",
-  "myJobs": "Mes jobs",
-  "viewAll": "Voir tout",
-  "selectDates": "Sélectionner dates",
-  "sun": "Lun",
-  "mon": "Mar",
-  "tue": "Mer",
-  "wed": "Jeu",
-  "thu": "Ven",
-  "fri": "Sam",
-  "sat": "Dim",
-  "address": "Adresse",
-  "dateOfBirth": "Date de naissance",
-  "phoneNumber": "Numéro de téléphone",
-  "language": "Langue",
-  "password": "Mot de passe",
-  "logout": "Déconnecter",
-  "profile": "Profil",
-  "more": "Plus",
-  "termsAndConditions": "Conditions générales",
-  "privacyPolicy": "Politique de confidentialité",
-  "licenses": "Licences",
-  "apply": "Postuler",
-  "approved": "Approuvé",
-  "rejected": "Rejeté",
-  "pending": "En attente",
-  "applyForJob": "Postuler pour ce job",
-  "cancelled": "Annulé",
-  "completed": "Terminé",
-  "home": "Home",
-  "statistics": "Statistiques",
-  "jobs": "Jobs",
-  "history": "Histoire",
-  "settings": "Paramètres",
-  "select": "Choisir",
-  "deleteMyAccount": "Supprimer mon compte",
-  "iStartedAt": "J'ai commencé à:",
-  "iEndedAt": "J'ai terminé à :",
-  "confirmTimes": "Confirmer les horaires",
-  "noJobs": "Pas de jobs",
-  "noAppliedJobs": "Pas de jobs postulé",
-  "startAddress": "Adresse de départ",
-  "chooseLocation": "Choisir lieu",
+  "welcomeBack": "Bon retour",
+  "unserviced": "Non desservi",
+  "onAverage": "En moyenne",
+  "name": "Nom",
+  "Phone": "Téléphone",
+  "Company": "Entreprise",
+  "washer": "Laveur",
+  "addNewWasher": "Ajouter un nouveau laveur",
+  "createNewJob": "Créer un nouveau travail",
+  "dutch": "Néerlandais",
+  "french": "Français",
+  "english": "Anglais",
+  "registered": "Inscrit",
+  "active": "Actif",
+  "duplicate": "Dupliquer",
+  "Edit": "Modifier",
+  "automaticallyLogOutAfter": "Déconnexion automatique après",
+  "afterOneHour": "Une heure",
+  "afterOneDay": "Un jour",
+  "afterOneWeek": "Une semaine",
+  "notification": "Notification",
+  "both": "Les deux",
   "january": "Janvier",
   "february": "Février",
   "march": "Mars",
@@ -89,23 +60,105 @@
   "august": "Août",
   "september": "Septembre",
   "october": "Octobre",
-  "november": "November",
+  "november": "Novembre",
   "december": "Décembre",
-  "from": "De",
-  "until": "Jusqu'à",
+  "hi": "Bonjour",
+  "productivity": "Productivité",
+  "week": "Semaine",
+  "month": "Année",
+  "jobsDoneThisWeek": "Travaux effectués cette semaine",
+  "jobsScheduledThisWeek": "Travaux prévus cette semaine",
+  "jobsDoneThisMonth": "Travaux effectués cette année",
+  "jobsScheduledThisMonth": "Travaux prévus cette année",
+  "setLocation": "Définir l'emplacement",
+  "search": "Rechercher",
+  "items": "Éléments",
+  "outOfAllPlannedJobs": "Sur tous les travaux planifiés",
+  "outOfAllJobs": "Sur tous les travaux",
+  "paramPerPage": "{item} par page",
+  "ofParamPages": "sur {pages} pages",
+  "paramOfParamParam": "{range} sur {total} {item}",
+  "applications": "Candidatures",
+  "washers": "Laveurs",
+  "back": "Retour",
+  "viewMore": "Voir plus",
+  "dateAndTime": "Date et heure",
+  "location": "Emplacement",
+  "iAmPayingForMyOwnTransport": "Je paie mon propre transport",
+  "iAmNotPayingForMyOwnTransport": "Je ne paie pas mon propre transport",
+  "fromYou": "De vous",
+  "jobInfo": "Informations sur le travail",
+  "anytime": "N'importe quand",
+  "thisWeek": "Cette semaine",
+  "thisMonth": "Ce mois",
   "lastWeek": "La semaine dernière",
   "lastMonth": "Le mois dernier",
   "thisYear": "Cette année",
   "lastYear": "L'année dernière",
+  "earlier": "Plus tôt",
+  "upcomingJobs": "Travaux à venir",
+  "myJobs": "Mes travaux",
+  "viewAll": "Voir tout",
+  "selectDates": "Sélectionner les dates",
   "selectTimes": "Sélectionner les heures",
-  "filter": "Filtre",
-  "noItems": "Pas d'articles",
+  "sun": "Dim",
+  "mon": "Lun",
+  "tue": "Mar",
+  "wed": "Mer",
+  "thu": "Jeu",
+  "fri": "Ven",
+  "sat": "Sam",
+  "address": "Adresse",
+  "dateOfBirth": "Date de naissance",
+  "phoneNumber": "Numéro de téléphone",
+  "language": "Langue",
+  "password": "Mot de passe",
+  "logout": "Déconnexion",
+  "profile": "Profil",
+  "more": "Plus",
+  "termsAndConditions": "Conditions générales",
+  "privacyPolicy": "Politique de confidentialité",
+  "licenses": "Licences",
+  "apply": "Postuler",
+  "approved": "Approuvé",
+  "rejected": "Rejeté",
+  "pending": "En attente",
+  "applyForJob": "Postuler au travail",
+  "cancelled": "Annulé",
+  "completed": "Terminé",
+  "completedJobs": "Travaux terminés",
+  "home": "Accueil",
+  "statistics": "Statistiques",
+  "jobs": "Travaux",
+  "history": "Historique",
+  "settings": "Paramètres",
+  "select": "Sélectionner",
+  "deleteMyAccount": "Supprimer mon compte",
+  "iStartedAt": "J'ai commencé à :",
+  "iEndedAt": "J'ai terminé à :",
+  "confirmTimes": "Confirmer les heures",
+  "noJobs": "Pas de travaux",
+  "noItems": "Pas d'éléments",
+  "noAppliedJobs": "Pas de travaux postulés",
+  "startAddress": "Adresse de départ",
+  "chooseLocation": "Choisir l'emplacement",
+  "from": "De",
+  "until": "Jusqu'à",
+  "filter": "Filtrer",
   "startTime": "Heure de début",
   "endTime": "Heure de fin",
   "h": "h",
   "copied": "Copié",
   "something": "Quelque chose",
-  "gotCopiedToYourClipboard": "a été copié dans le presse-papiers",
+  "somethingWentWrong": "Quelque chose s'est mal passé, nous sommes au courant !",
+  "codeIncorrect": "Êtes-vous sûr que le code donné est correct ?",
+  "gotCopiedToYourClipboard": "a été copié dans votre presse-papiers",
   "denied": "Refusé",
-  "goBack": "Retourner"
+  "goBack": "Retour",
+  "breakTime": "Temps de pause",
+  "aPlatformWhere": "Une plateforme où les étudiants et les flexi's\nde ",
+  "canExplore": " peuvent explorer et postuler pour\ndes opportunités dans le ",
+  "jobPortfolio": " portefeuille d'emplois",
+  "werkr": "WERKR",
+  "letsLogin": "Connectons-nous. Postulez aux emplois !"
 }
