--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -1,121 +1,56 @@
 {
-  "oops": "Oops...",
-  "newCopy": "New",
-  "customer": "Customer",
-  "customerName": "Customer name",
-  "createNewCustomer": "Create new Customer",
-  "hours": "Hours",
-  "email": "Email",
+  "oops": "Oeps...",
+  "newCopy": "Nieuw",
+  "customer": "Klant",
+  "customerName": "Klantnaam",
+  "createNewCustomer": "Nieuwe klant aanmaken",
+  "hours": "Uren",
+  "email": "E-mail",
+  "next": "Volgende",
+  "welcomeToWerkr": "Welkom bij WERKR",
+  "becomeAWerkr": "Word een WERKR",
+  "alreadyAWerkr": "Al een WERKR",
+  "workWithWerkr": "Werk met WERKR,\nsnel & gemakkelijk",
+  "emailAddress": "E-mailadres",
+  "forgotPassword": "Wachtwoord vergeten?",
+  "resetPassword": "Wachtwoord resetten",
+  "confirmPassword": "Bevestig wachtwoord",
+  "passwordsDoNotMatch": "Wachtwoorden komen niet overeen",
+  "createANewPassword": "Maak een nieuw wachtwoord aan",
+  "setYourPassword": "Stel je nieuwe wachtwoord in om in te loggen en toegang te krijgen tot WERKR",
+  "passwordHasBeenReset": "Je wachtwoord is gereset!",
+  "youCanNowLogin": "Je kunt nu inloggen met je nieuwe wachtwoord",
+  "dontHaveAnAccount": "Nog geen account?",
+  "register": "Registreren",
+  "verifyYourEmail": "Verifieer je e-mail",
+  "verifyYourEmailDescription": "Om je identiteit te verifiëren, voer de code in die we naar je e-mailadres hebben gestuurd.",
+  "verificationCode": "Verificatiecode",
+  "yourCode": "Je code",
+  "phone": "Telefoon",
   "customers": "Klanten",
   "welcomeBack": "Welkom terug",
-  "unserviced": "Klanten",
+  "unserviced": "Niet bediend",
   "onAverage": "Gemiddeld",
-  "phone": "Telefoon",
   "name": "Naam",
-  "Phone": "Tel",
+  "Phone": "Telefoon",
   "Company": "Bedrijf",
-  "washer": "Washer",
-  "addNewWasher": "Nieuwe Washer",
-  "createNewJob": "Nieuwe job toevoegen",
+  "washer": "Wasser",
+  "addNewWasher": "Nieuwe wasser toevoegen",
+  "createNewJob": "Nieuwe job aanmaken",
   "dutch": "Nederlands",
   "french": "Frans",
   "english": "Engels",
   "registered": "Geregistreerd",
-  "active": "Actieve",
+  "active": "Actief",
   "duplicate": "Dupliceren",
-  "Edit": "Wijzigen",
+  "Edit": "Bewerken",
   "automaticallyLogOutAfter": "Automatisch uitloggen na",
-  "afterOneHour": "1 Uur",
-  "afterOneDay": "1 Dag",
-  "afterOneWeek": "1 Week",
+  "afterOneHour": "Een uur",
+  "afterOneDay": "Een dag",
+  "afterOneWeek": "Een week",
   "notification": "Melding",
-  "both": "Beiden",
+  "both": "Beide",
   "january": "Januari",
-  "February": "Februari",
-  "March": "Maart",
-  "April": "April",
-  "May": "Mei",
-  "June": "Juni",
-  "August": "Augustus",
-  "September": "September",
-  "October": "Oktober",
-  "November": "November",
-  "December": "December",
-  "hi": "Dag",
-  "productivity": "Productiviteit",
-  "week": "Week",
-  "month": "Jaar",
-  "jobsDoneThisWeek": "jobs voltooid deze week",
-  "jobsScheduledThisWeek": "jobs ingepland deze week",
-  "jobsDoneThisMonth": "jobs voltooid dit jaar",
-  "jobsScheduledThisMonth": "jobs ingepland dit jaar",
-  "setLocation": "Locatie instellen",
-  "search": "Zoeken",
-  "items": "Items",
-  "outOfAllPlannedJobs": "Van alle geplande jobs",
-  "outOfAllJobs": "Van alle jobs",
-  "paramPerPage": "{item} per pagina",
-  "ofParamPages": "van de {pages} paginas",
-  "paramOfParamParam": "{range} van de {total} {item}",
-  "applications": "Aanmeldingen",
-  "washers": "Washers",
-  "back": "Terug",
-  "viewMore": "Meer",
-  "dateAndTime": "Datum & tijd",
-  "location": "Locatie",
-  "iAmPayingForMyOwnTransport": "Ik betaal mijn eigen transportkosten",
-  "iAmNotPayingForMyOwnTransport": "Ik betaal niet mijn eigen transportkosten",
-  "fromYou": "van jou",
-  "jobInfo": "Job info",
-  "anytime": "Altijd",
-  "thisWeek": "Deze week",
-  "thisMonth": "Deze maand",
-  "earlier": "Eerder",
-  "upcomingJobs": "Aankomende jobs",
-  "myJobs": "Mijn jobs",
-  "viewAll": "Alles bekijken",
-  "selectDates": "Datums selecteren",
-  "selectTimes": "Uren selecteren",
-  "sun": "Zon",
-  "mon": "Maa",
-  "tue": "Din",
-  "wed": "Woe",
-  "thu": "Don",
-  "fri": "Vri",
-  "sat": "Zat",
-  "address": "Adres",
-  "dateOfBirth": "Geboortedatum",
-  "phoneNumber": "Telefoonnummer",
-  "language": "Taal",
-  "password": "Wachtwoord",
-  "logout": "Uitloggen",
-  "profile": "Profiel",
-  "more": "Meer",
-  "termsAndConditions": "Terms & conditions",
-  "privacyPolicy": "Privacy policy",
-  "licenses": "Licenties",
-  "apply": "Aanmelden",
-  "approved": "Geaccepteerd",
-  "rejected": "Afgewezen",
-  "pending": "Open",
-  "applyForJob": "Aanmelden voor job",
-  "cancelled": "Geannuleerd",
-  "completed": "Voltooid",
-  "completedJobs": "Voltooide Jobs",
-  "home": "Home",
-  "statistics": "Statistieken",
-  "jobs": "Jobs",
-  "history": "Geschiedenis",
-  "settings": "Instellingen",
-  "select": "Selecteren",
-  "deleteMyAccount": "Mijn account verwijderen",
-  "iStartedAt": "Ik begon om:",
-  "iEndedAt": "Ik eindigde om:",
-  "confirmTimes": "Uren bevestigen",
-  "noJobs": "Geen jobs",
-  "noAppliedJobs": "Geen ingetekende jobs",
-  "startAddress": "Start adres",
-  "chooseLocation": "Kies locatie",
   "february": "Februari",
   "march": "Maart",
   "april": "April",
@@ -127,20 +62,103 @@
   "october": "Oktober",
   "november": "November",
   "december": "December",
-  "from": "Van",
-  "until": "Tot",
+  "hi": "Hoi",
+  "productivity": "Productiviteit",
+  "week": "Week",
+  "month": "Jaar",
+  "jobsDoneThisWeek": "Jobs gedaan deze week",
+  "jobsScheduledThisWeek": "Jobs gepland deze week",
+  "jobsDoneThisMonth": "Jobs gedaan dit jaar",
+  "jobsScheduledThisMonth": "Jobs gepland dit jaar",
+  "setLocation": "Locatie instellen",
+  "search": "Zoeken",
+  "items": "Items",
+  "outOfAllPlannedJobs": "Van alle geplande jobs",
+  "outOfAllJobs": "Van alle jobs",
+  "paramPerPage": "{item} per pagina",
+  "ofParamPages": "van {pages} pagina's",
+  "paramOfParamParam": "{range} van de {total} {item}",
+  "applications": "Sollicitaties",
+  "washers": "Wassers",
+  "back": "Terug",
+  "viewMore": "Meer bekijken",
+  "dateAndTime": "Datum & tijd",
+  "location": "Locatie",
+  "iAmPayingForMyOwnTransport": "Ik betaal mijn eigen vervoer",
+  "iAmNotPayingForMyOwnTransport": "Ik betaal niet voor mijn eigen vervoer",
+  "fromYou": "Van jou",
+  "jobInfo": "Job informatie",
+  "anytime": "Altijd",
+  "thisWeek": "Deze week",
+  "thisMonth": "Deze maand",
   "lastWeek": "Vorige week",
   "lastMonth": "Vorige maand",
   "thisYear": "Dit jaar",
   "lastYear": "Vorig jaar",
+  "earlier": "Eerder",
+  "upcomingJobs": "Aankomende jobs",
+  "myJobs": "Mijn jobs",
+  "viewAll": "Alles bekijken",
+  "selectDates": "Selecteer datums",
+  "selectTimes": "Selecteer tijden",
+  "sun": "Zo",
+  "mon": "Ma",
+  "tue": "Di",
+  "wed": "Wo",
+  "thu": "Do",
+  "fri": "Vr",
+  "sat": "Za",
+  "address": "Adres",
+  "dateOfBirth": "Geboortedatum",
+  "phoneNumber": "Telefoonnummer",
+  "language": "Taal",
+  "password": "Wachtwoord",
+  "logout": "Uitloggen",
+  "profile": "Profiel",
+  "more": "Meer",
+  "termsAndConditions": "Algemene voorwaarden",
+  "privacyPolicy": "Privacybeleid",
+  "licenses": "Licenties",
+  "apply": "Solliciteren",
+  "approved": "Goedgekeurd",
+  "rejected": "Afgewezen",
+  "pending": "In behandeling",
+  "applyForJob": "Solliciteren voor job",
+  "cancelled": "Geannuleerd",
+  "completed": "Voltooid",
+  "completedJobs": "Voltooide jobs",
+  "home": "Home",
+  "statistics": "Statistieken",
+  "jobs": "Jobs",
+  "history": "Geschiedenis",
+  "settings": "Instellingen",
+  "select": "Selecteren",
+  "deleteMyAccount": "Mijn account verwijderen",
+  "iStartedAt": "Ik ben begonnen om:",
+  "iEndedAt": "Ik ben geëindigd om:",
+  "confirmTimes": "Tijden bevestigen",
+  "noJobs": "Geen jobs",
+  "noItems": "Geen items",
+  "noAppliedJobs": "Geen gesolliciteerde jobs",
+  "startAddress": "Startadres",
+  "chooseLocation": "Kies locatie",
+  "from": "Van",
+  "until": "Tot",
   "filter": "Filter",
-  "noItems": "Geen resultaten",
-  "startTime": "Begin",
-  "endTime": "Eind",
+  "startTime": "Starttijd",
+  "endTime": "Eindtijd",
   "h": "u",
   "copied": "Gekopieerd",
   "something": "Iets",
-  "gotCopiedToYourClipboard": "werd gekopieerd naar je klembord",
-  "denied": "Afgewezen",
-  "goBack": "Terug"
+  "somethingWentWrong": "Er is iets misgegaan, we zijn ervan op de hoogte!",
+  "codeIncorrect": "Weet je zeker dat de ingevoerde code correct is?",
+  "gotCopiedToYourClipboard": "is gekopieerd naar je klembord",
+  "denied": "Geweigerd",
+  "goBack": "Ga terug",
+  "breakTime": "Pauzetijd",
+  "aPlatformWhere": "Een platform waar studenten en flexi's\nvan ",
+  "canExplore": " kunnen verkennen en solliciteren\nvoor kansen binnen de ",
+  "jobPortfolio": " job portfolio",
+  "werkr": "WERKR",
+  "letsLogin": "Laten we inloggen. Solliciteer op jobs!"
 }
